docs: Remove "Hackathon Dorahacks" from the CTA footnote.

--- a/landing/index.html
+++ b/landing/index.html
@@ -1931,7 +1931,7 @@
                     <a href="#" class="btn btn--outline">Hablar con el Equipo</a>
                 </div>
                 <p class="cta__footnote">
-                    Proyecto desarrollado en el marco del Bootcamp Stellar &middot; Hackathon Dorahacks
+                    Proyecto desarrollado en el marco del Bootcamp Stellar &middot;
                 </p>
             </div>
         </div>
